# loterra-staking-contract

./: Cargo.toml
.circleci/: config.yml
artifacts/: checksums.txt  checksums_intermediate.txt  loterra_staking_contract.wasm
examples/: schema.rs
schema/: claim.json  config_response.json  execute_msg.json  handle_msg.json  holder_response.json  holders_response.json  init_msg.json  instantiate_msg.json  query_msg.json  receive_msg.json  state_response.json
src/: admin.rs  claim.rs  contract.rs  global.rs  helper.rs  lib.rs  math.rs  msg.rs  state.rs  taxation.rs  user.rs
src/testing/: mock_querier.rs  mod.rs  tests.rs
